<?xml version="1.0" encoding="utf-8"?>
<!--Constraint layout is more flexible and powerful than linear layout for complex UI-->
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:cardBackgroundColor="@color/white_white_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/shoe_name_card_view"
                    style="@style/shoe_card_style"
                    android:autofillHints="Shoe Name"
                    android:text="@{shoe.name}"
                    tools:text="@string/dummy_content"/>

                <TextView
                    android:id="@+id/shoe_company_card_view"
                    style="@style/shoe_card_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/company"
                    android:text="@{shoe.company}"
                    tools:text="@string/dummy_content"/>

                <TextView
                    android:id="@+id/shoe_size_card_view"
                    style="@style/shoe_card_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/shoe_size"
                    android:text="@{shoe.size}"
                    tools:text="@string/dummy_content"/>

                <TextView
                    android:id="@+id/shoe_description_card_view"
                    style="@style/shoe_card_style_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/shoe_description"
                    android:text="@{shoe.description}"
                    tools:text="@string/dummy_content"/>

                <View
                    android:id="@+id/view"
                    android:layout_width="wrap_content"
                    android:layout_height="5dp"
                    android:background="@color/white_gray" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>